--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,8 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Sysmo - Infraestructura en la Nube</title>
+		<link rel="stylesheet" href="/src/styles/globals.css" />
 	</head>
 	<body>
 		<slot />
