--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,20 @@
 ---
-import Welcome from "../components/Welcome.astro"
 import Layout from "../layouts/Layout.astro"
+import Header from "../components/Header.astro"
+import Hero from "../components/Hero.astro"
+import Benefits from "../components/Benefits.astro"
+import SocialProof from "../components/SocialProof.astro"
+import Pricing from "../components/Pricing.astro"
+import Footer from "../components/Footer.astro"
+
+import "../styles/globals.css"
 ---
 
 <Layout>
-	<Welcome />
+	<Header />
+	<Hero />
+	<Benefits />
+	<SocialProof />
+	<Pricing />
+	<Footer />
 </Layout>
