--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from "../layouts/Layout.astro"
 import Header from "../components/Header.astro"
 import Hero from "../components/Hero.astro"
+import Carousel from "../components/Carousel.astro"
 import Benefits from "../components/Benefits.astro"
 import SocialProof from "../components/SocialProof.astro"
 import Pricing from "../components/Pricing.astro"
@@ -14,6 +15,7 @@ import "../styles/globals.css"
 	<Header />
 	<Hero />
 	<Benefits />
+	<Carousel />
 	<SocialProof />
 	<Pricing />
 	<Footer />
