--- a/src/pages/blog/iso-27001.astro
+++ b/src/pages/blog/iso-27001.astro
@@ -4,10 +4,13 @@ import Layout from "../../layouts/Layout.astro"
 
 <Layout>
 	<main class="container mx-auto px-4 py-12">
-		<article class="max-w-3xl mx-auto bg-white shadow-md rounded p-8">
-			<a href="/blog" class="text-sm text-primary mb-4 inline-block"
-				>← Volver al Blog</a
+		<article class="max-w-3xl mx-auto bg-white shadow-md rounded-2xl p-8">
+			<a
+				href="/blog"
+				class="inline-flex items-center text-primary font-semibold hover:underline transition ease-in-out duration-300 mb-6"
 			>
+				Volver al Blog
+			</a>
 			<div class="text-sm text-gray-600 font-bold mb-2">
 				11 de noviembre de 2025
 			</div>
