fix: no applied global styles

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,7 @@
+---
+import "../styles/globals.css"
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -6,7 +10,6 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Sysmo - Infraestructura en la Nube</title>
-		<link rel="stylesheet" href="/src/styles/globals.css" />
 	</head>
 	<body>
 		<slot />
